--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -6,10 +6,12 @@ $govuk-global-styles: true;
 @import "node_modules/govuk-frontend/all";
 
 @import "components/cookie-banner";
-@import "components/course-parts";
-@import "components/success-summary";
-@import "components/definition-list";
-@import "components/currency-input";
+
+@import "patterns/course-parts";
+
+@import "patterns/success-summary";
+
+@import "patterns/definition-list";
 
 // GOVU.UK Tabs without border around entire component
 .govuk-tabs__panel--without-border {
