--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -1,174 +1,94 @@
 ﻿@model FromUcasViewModel
 
 @{
-   Layout = "_Layout";
-   ViewBag.Title = Model.Course.Name;
+    Layout = "_Layout";
+    ViewBag.Title = Model.Course.Name;
+    var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 }
 
-<a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>
+<a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>  
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
-  <h1 class="govuk-heading-xl">
-    <span class="govuk-caption-xl">@Model.Course.Name</span>
-    @Model.Course.Type (@Model.Course.ProgrammeCode)
-  </h1>
+    <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">@Model.Course.Name</span>
+        @Model.Course.Type (@Model.Course.ProgrammeCode)
+    </h1>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <p class="govuk-body-l">Information imported from UCAS for course @Model.Course.ProgrammeCode.</p>
-    </div>
-  </div>
-
-  <dl class="govuk-list govuk-list--description">
-    @if (!string.IsNullOrEmpty(@Model.Course.Name)) {
-      <dt>Name:</dt>
-      <dd>@Model.Course.Name</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.UcasCode)) {
-      <dt>Training provider code:</dt>
-      <dd>@Model.Course.UcasCode</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.ProgrammeCode)) {
-      <dt>Training programme code:</dt>
-      <dd>@Model.Course.ProgrammeCode</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.Accrediting)) {
-      <dt>Accrediting provider:</dt>
-      <dd>@Model.Course.Accrediting</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.GetRoute())) {
-      <dt>Route:</dt>
-      <dd>@Model.Course.GetRoute()</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.Subjects)) {
-      <dt>Subjects:</dt>
-      <dd>@Model.Course.Subjects</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.GetStudyMode())) {
-      <dt>Mode of study:</dt>
-      <dd>@Model.Course.GetStudyMode()</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.GetAgeRange())) {
-      <dt>Age range:</dt>
-      <dd>@Model.Course.GetAgeRange()</dd>
-    }
-    @if (!string.IsNullOrEmpty(@Model.Course.GetQualification())) {
-      <dt>Qualification:</dt>
-      <dd>@Model.Course.GetQualification()</dd>
-    }
-  </dl>
-
-  <div class="govuk-grid-row govuk-!-margin-bottom-9">
-    <div class="govuk-grid-column-two-thirds">
-        <div class="course-parts">
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">About this course</h3>
-            <a class="course-parts__action" href="@Url.Action("About", "Course", new { ucasCode = Model.Course.UcasCode })">Edit</a>
-            <dl class="course-parts__fields">
-              <dt class="course-parts__fields__label">
-                  About this course
-              </dt>
-              <dd class="course-parts__fields__value">
-                  This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                  Interview process (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                  This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                  How school placements work
-              </dt>
-              <dd class="course-parts__fields__value">
-                  This field is empty
-              </dd>
-            </dl>
-          </div>
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">Course length and fees</h3>
-            <a class="course-parts__action" href="@Url.Action("Fees", "Course", new { ucasCode = Model.Course.UcasCode })">Edit</a>
-            <dl class="course-parts__fields">
-              <dt class="course-parts__fields__label">
-                Course length
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee for UK and EU students
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee for international students (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee details (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Financial support you offer (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-            </dl>
-          </div>
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">Requirements and eligbility</h3>
-            <a class="course-parts__action" href="@Url.Action("Eligbility", "Course", new { ucasCode = Model.Course.UcasCode })">Edit</a>
-            <dl class="course-parts__fields">
-              <dt class="course-parts__fields__label">
-                Qualifications needed
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Personal qualities (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-              <dt class="course-parts__fields__label">
-                Other requirements (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                This field is empty
-              </dd>
-            </dl>
-          </div>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <p class="govuk-body-l">
+                Information imported from UCAS for course @Model.Course.ProgrammeCode.
+            </p>
         </div>
-      </div>
-   </div>
+    </div>
 
-   <h3 class="govuk-heading-m">Training locations</h3>
-   <table class="govuk-table">
-      <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-          <th class="govuk-table__header" scope="col">Location name</th>
-          <th class="govuk-table__header" scope="col">Address</th>
-          <th class="govuk-table__header" scope="col">Code</th>
-          <th class="govuk-table__header" scope="col">Applications accepted from</th>
-        </tr>
+    <dl class="govuk-list govuk-list--description">
+        @if (!string.IsNullOrEmpty(@Model.Course.Name)) {
+            <dt>Name:</dt>
+            <dd>@Model.Course.Name</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.UcasCode)) {
+            <dt>Training provider code:</dt>
+            <dd>@Model.Course.UcasCode</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.ProgrammeCode)) {
+            <dt>Training programme code:</dt>
+            <dd>@Model.Course.ProgrammeCode</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.Accrediting)) {
+            <dt>Accrediting provider:</dt>
+            <dd>@Model.Course.Accrediting</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.GetRoute())) {
+            <dt>Route:</dt>
+            <dd>@Model.Course.GetRoute()</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.Subjects)) {
+            <dt>Subjects:</dt>
+            <dd>@Model.Course.Subjects</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.GetStudyMode())) {
+            <dt>Mode of study:</dt>
+            <dd>@Model.Course.GetStudyMode()</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.GetAgeRange())) {
+            <dt>Age range:</dt>
+            <dd>@Model.Course.GetAgeRange()</dd>
+        }
+        @if (!string.IsNullOrEmpty(@Model.Course.GetQualification())) {
+            <dt>Qualification:</dt>
+            <dd>@Model.Course.GetQualification()</dd>
+        }
+    </dl>
+
+    <h3 class="govuk-heading-m">Training locations</h3>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th class="govuk-table__header" scope="col">Location name</th>
+                <th class="govuk-table__header" scope="col">Address</th>
+                <th class="govuk-table__header" scope="col">Code</th>
+                @*<th class="govuk-table__header" scope="col">Full time vacancies</th>
+                    <th class="govuk-table__header" scope="col">Part time vacancies</th>*@
+                <th class="govuk-table__header" scope="col">Applications accepted from</th>
+            </tr>
         </thead>
         <tbody class="govuk-table__body">
-          @foreach (var school in Model.Course.Schools)
-          {
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">@school.LocationName</td>
-              <td class="govuk-table__cell">@school.Address</td>
-              <td class="govuk-table__cell">@school.Code</td>
-              <td class="govuk-table__cell">@school.ApplicationsAcceptedFrom</td>
-            </tr>
-          }
-      </tbody>
-   </table>
+            @foreach (var school in Model.Course.Schools)
+            {
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">@school.LocationName</td>
+                    <td class="govuk-table__cell">@school.Address</td>
+                    <td class="govuk-table__cell">@school.Code</td>
+                    @*<td class="govuk-table__cell">Vacancies</td>
+                        <td class="govuk-table__cell">Not applicable</td>*@
+                    <td class="govuk-table__cell">@school.ApplicationsAcceptedFrom</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <p>
+        <a href="@link" class="govuk-link">Contact the Becoming a Teacher team to report a problem</a>
+    </p>
 </main>
