--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -92,10 +92,13 @@
             <strong class="govuk-tag govuk-tag--blank">Empty</strong>
             <p class="govuk-body">You need to complete and publish this information.</p>
 
-            <hr class="related__section-break" />
-            <h4 class="govuk-heading-m">Preview</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
-            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            @if (Model.AllowPreview)
+            {
+              <hr class="related__section-break" />
+              <h4 class="govuk-heading-m">Preview</h4>
+              <p class="govuk-body">This information will show on all your courses.</p>
+              <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            }
 
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
@@ -110,10 +113,13 @@
             <strong class="govuk-tag govuk-tag--draft">Draft</strong>
             <p class="govuk-body">You have unpublished changes.</p>
 
-            <hr class="related__section-break" />
-            <h4 class="govuk-heading-m">Preview</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
-            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            @if (Model.AllowPreview)
+            {
+              <hr class="related__section-break" />
+              <h4 class="govuk-heading-m">Preview</h4>
+              <p class="govuk-body">This information will show on all your courses.</p>
+              <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            }
 
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
@@ -135,10 +141,13 @@
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
 
-            <hr class="related__section-break" />
-            <h4 class="govuk-heading-m">Preview</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
-            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            @if (Model.AllowPreview)
+            {
+              <hr class="related__section-break" />
+              <h4 class="govuk-heading-m">Preview</h4>
+              <p class="govuk-body">This information will show on all your courses.</p>
+              <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            }
 
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
@@ -153,11 +162,14 @@
             <strong class="govuk-tag govuk-tag--draft">Empty</strong>
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
-
-            <hr class="related__section-break" />
-            <h4 class="govuk-heading-m">Preview</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
-            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            
+            @if (Model.AllowPreview)
+            {
+              <hr class="related__section-break" />
+              <h4 class="govuk-heading-m">Preview</h4>
+              <p class="govuk-body">This information will show on all your courses.</p>
+              <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+            }
 
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
