--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -50,7 +50,7 @@
         </ul>
         <div class="govuk-character-count" data-module="character-count" data-maxwords="250">
           <div id="Salary-wrapper" class="govuk-form-group @(salary ? " govuk-form-group--error " : " ")">
-            <label asp-for="SalaryDetails" class="govuk-label">Salary</label>
+            <label asp-for="SalaryDetails" class="govuk-label govuk-!-font-weight-bold">Salary</label>
             @if (salary) {
               <span asp-validation-for="SalaryDetails" class="govuk-error-message"></span>
             }
