--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -56,18 +56,18 @@
           <td class="govuk-table__cell">@course.GetCourseVariantType()</td>
           <td class="govuk-table__cell">@course.GetCourseStatus()</td>
           <td class="govuk-table__cell">
-            @if(course.GetCourseStatus() != "Not running")
+            @if(course.CanHaveEnrichment())
             {
               @switch(course.EnrichmentWorkflowStatus)
               {
                 case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Draft:
-                  <div class="govuk-tag govuk-tag__inline govuk-tag--draft">draft</div>
+                  <div class="govuk-tag govuk-tag--inline govuk-tag--draft">draft</div>
                   break;
                 case GovUk.Education.ManageCourses.ApiClient.EnumStatus.Published:              
-                  <div class="govuk-tag govuk-tag__inline govuk-tag--published">published</div>
+                  <div class="govuk-tag govuk-tag--inline govuk-tag--published">published</div>
                   break;
                 default:
-                  <div class="govuk-tag govuk-tag__inline govuk-tag--blank">empty</div>
+                  <div class="govuk-tag govuk-tag--inline govuk-tag--blank">empty</div>
                   break;
               }
             }
