--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -20,7 +20,7 @@
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @Html.Partial("~/Views/Organisation/Shared/RequestAccessSuccess.cshtml")
-  @Html.Partial("~/Views/Shared/_Alerts.cshtml")
+  @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
